review: fix inputs spacing and button text color

--- a/style.css
+++ b/style.css
@@ -656,6 +656,10 @@ section h2 {
   display: block;
   opacity: 0.7;
 }
+[data-theme="dark"] .price-methods img {
+  opacity: 1;
+  filter: invert(0.7);
+}
 
 .pricing-right {
   display: flex; flex-direction: column;
